@@ -141,7 +141,7 @@ to restart. Then report the status or timeout.
 
 <dt><b>check</b>
 </dt>
-<dd>Check for the service to be in the state that&rsquo;s been requested. Wait up to
+<dd>Check for the service to be in the state that&rsquo;s been requested (up or down). Wait up to
 7 seconds for the service to reach the requested state, then report the
 status or timeout. If the requested state of the service is <i>up</i>, and the
 script <i>./check</i> exists in the service directory, <b>sv</b> runs this script to check
