@@ -200,7 +200,7 @@ Then report the status or timeout.
 .SS Additional Commands
 .TP
 .B check
-Check for the service to be in the state that's been requested.
+Check for the service to be in the state that's been requested (up or down).
 Wait up to 7 seconds for the service to reach the requested state, then
 report the status or timeout.
 If the requested state of the service is
